# Projection_Pursuit_Summer

./: .gitignore  algorithms.py  demo.ipynb  readme.md  slurm-7384049.out
Server_Script/: BOMP.sh  example.sh
task1/: Bagging_with_OMP_demo.ipynb  CoSaMP.ipynb  Configs_Generator.ipynb  OMP_LASSO.ipynb  Pursuit_Algorithms.py  algorithms.py  bagging_pursuit_demo.ipynb  bagging_pursuit_functions.py  demo.ipynb  performance_mean.csv  pyproject.toml  readme.md  results.csv  results.pkl  testing.py
task1/Configs/: sparse_level_100_200.yaml  sparse_level_10_20.yaml  sparse_level_2000.yaml  sparse_level_2_5.yaml
task1/outputs/: reports.pkl  true_sparsity_2_noise_level_0.01_trial_0_100000_300.pkl  true_sparsity_2_noise_level_0.01_trial_1_100000_300.pkl  true_sparsity_2_noise_level_0.05_trial_0_100000_300.pkl  true_sparsity_2_noise_level_0.05_trial_1_100000_300.pkl  true_sparsity_2_noise_level_0.1_trial_0_100000_300.pkl  true_sparsity_2_noise_level_0.1_trial_1_100000_300.pkl  true_sparsity_2_noise_level_0_trial_0_100000_300.pkl  true_sparsity_2_noise_level_0_trial_1_100000_300.pkl  true_sparsity_5_noise_level_0.01_trial_0_100000_300.pkl  true_sparsity_5_noise_level_0.01_trial_1_100000_300.pkl  true_sparsity_5_noise_level_0.05_trial_0_100000_300.pkl  true_sparsity_5_noise_level_0.05_trial_1_100000_300.pkl  true_sparsity_5_noise_level_0.1_trial_0_100000_300.pkl  true_sparsity_5_noise_level_0.1_trial_1_100000_300.pkl  true_sparsity_5_noise_level_0_trial_0_100000_300.pkl  true_sparsity_5_noise_level_0_trial_1_100000_300.pkl
task1/outputs/.hydra/: config.yaml  hydra.yaml
(+371 files in other folders)
